# Polynomial

./: CMakeLists.txt  Makefile  Polynomial.cpp  Polynomial.h  README.md  poly_class.cpp
